fixing spacing issues

--- a/content/Home/Home.css
+++ b/content/Home/Home.css
@@ -49,7 +49,6 @@
     letter-spacing: 0.02em;
     font-family: var(--main-font);
     color: var(--main-font-color);
-    margin-top: 10vh;
     margin-bottom: 44px;
 }
 
